correcao de conflitos